--- a/src/app/features/organisation-section/components/project/project.component.html
+++ b/src/app/features/organisation-section/components/project/project.component.html
@@ -173,14 +173,13 @@
 </div>
 
 <div class="rounded-lg w-full overflow-x-auto p-2 bg-white shadow-sm border border-gray-200">
-  <div class="min-w-max">
-        <div
-          class="flex flex-wrap items-center justify-between gap-x-2 gap-y-4 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full">
+  <div class="min-w-full relative z-10">
+    <div class="flex flex-nowrap items-start gap-x-2 gap-y-2 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full overflow-x-auto" style="overflow: visible;">
 
-          <div class="relative flex-grow">
+          <div class="relative w-full">
             <label class="block text-xs font-medium mb-1">Customer</label>
             <ng-select [(ngModel)]="phaseCustomerFilter" (change)="applyPhaseFilters()"
-              class="text-xs custom-ng-select-filter" [clearable]="true" [searchable]="true">
+              class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
               <ng-option [value]="">All Customers</ng-option>
               <ng-option *ngFor="let customer of optionCustomers" [value]="customer.customer_name">
                 {{ customer.customer_name }}
@@ -189,10 +188,10 @@
           </div>
 
           <!-- Project Filter -->
-          <div class="relative flex-grow">
+          <div class="relative w-full">
             <label class="block text-xs font-medium mb-1">Project</label>
             <ng-select [(ngModel)]="phaseProjectFilter" (change)="applyPhaseFilters()"
-              class="text-xs custom-ng-select-filter" [clearable]="true" [searchable]="true">
+              class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
               <ng-option [value]="">All Projects</ng-option>
               <ng-option *ngFor="let project of optionProject" [value]="project.project_name">
                 {{ project.project_name }}
@@ -201,10 +200,10 @@
           </div>
 
           <!-- Deliverable Filter -->
-          <div class="relative flex-grow">
+          <div class="relative w-full">
             <label class="block text-xs font-medium mb-1">Deliverable</label>
             <ng-select [(ngModel)]="phaseDeliverableFilter" (change)="applyPhaseFilters()"
-              class="text-xs custom-ng-select-filter" [clearable]="true" [searchable]="true">
+              class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
               <ng-option [value]="">All Deliverables</ng-option>
               <ng-option *ngFor="let deliverable of optionDeliverables" [value]="deliverable.project_deliverable_name">
                 {{ deliverable.project_deliverable_name }}
@@ -214,10 +213,10 @@
 
           <!-- Phase Filter -->
           <!-- Phase Filter -->
-          <div class="relative flex-grow">
+          <div class="relative w-full">
             <label class="block text-xs font-medium mb-1">Phase</label>
             <input type="text" [(ngModel)]="phaseNameFilter" (input)="applyPhaseFilters()" placeholder="Search Phase"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
+              class="text-xs border border-gray-300 rounded px-2 py-1 w-full h-6 " />
           </div>
 
 
@@ -570,15 +569,14 @@
 
 <div class="rounded-lg w-full overflow-x-auto p-2 bg-white shadow-sm border border-gray-200">
   <!-- Filter Section -->
-      <div class="min-w-max">
-        <div
-          class="flex flex-wrap items-center justify-between gap-x-2 gap-y-4 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full">
+  <div class="min-w-full relative z-10">
+    <div class="flex flex-nowrap items-start gap-x-2 gap-y-2 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full overflow-x-auto" style="overflow: visible;">
 
 
-          <div class="relative flex-grow">
+          <div class="relative w-full">
             <label class="block text-xs font-medium mb-1">Customer</label>
             <ng-select [(ngModel)]="customerNameFilter" (change)="applyDeliverableFilters()"
-              class="text-xs custom-ng-select-filter" [clearable]="true" [searchable]="true">
+              class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
               <ng-option [value]="">All Customers</ng-option>
               <ng-option *ngFor="let customer of optionCustomers" [value]="customer.customer_id">
                 {{ customer.customer_name }}
@@ -586,10 +584,10 @@
             </ng-select>
           </div>
 
-          <div class="relative flex-grow">
+          <div class="relative w-full">
             <label class="block text-xs font-medium mb-1">Project</label>
             <ng-select [(ngModel)]="projectNameFilter" (change)="applyDeliverableFilters()"
-              class="text-xs custom-ng-select-filter" [clearable]="true" [searchable]="true">
+              class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
               <ng-option [value]="">All Projects</ng-option>
               <ng-option *ngFor="let project of optionProject" [value]="project.project_id">
                 {{ project.project_name }}
@@ -598,11 +596,11 @@
           </div>
 
           <!-- Deliverable Filter -->
-          <div class="relative flex-grow">
+          <div class="relative w-full">
             <label class="block text-xs font-medium mb-1">Deliverable</label>
             <input type="text" [(ngModel)]="deliverableNameFilter" (input)="applyDeliverableFilters()"
               placeholder="Search Deliverable"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
+              class="text-xs border border-gray-300 rounded px-2 py-1 w-full h-6 " />
           </div>
           <!-- Clear All Filters -->
           <button (click)="clearDeliverableFilters()"
@@ -994,14 +992,13 @@
     <div class="rounded-lg w-full overflow-x-auto p-2 bg-white shadow-sm border border-gray-200">
 
       <!-- Filter Section -->
-      <div class="min-w-max">
-        <div
-          class="flex flex-wrap items-center justify-between gap-x-2 gap-y-4 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full">
+      <div class="min-w-full relative z-10">
+        <div class="flex flex-nowrap items-start gap-x-2 gap-y-2 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full overflow-x-auto" style="overflow: visible;">
           <!-- Project Name Filter -->
-          <div class="relative flex-grow">
-            <label class="block text-xs font-medium text-gray-700 mb-1">Project</label>
+          <div class="relative w-48">
+            <label class="block text-xs font-medium mb-1">Project</label>
             <ng-select [(ngModel)]="projectNameFilterOfProject" (change)="applyProjectFilters()" [clearable]="true"
-              [searchable]="true" class="text-xs custom-ng-select-filter">
+              [searchable]="true" class="text-xs custom-ng-select-filter w-full">
               <ng-option *ngFor="let project of optionProject" [value]="project.project_id">
                 {{ project.project_name }}
               </ng-option>
@@ -1009,10 +1006,10 @@
           </div>
 
           <!-- Customer Name Filter -->
-          <div class="relative flex-grow">
-            <label class="block text-xs font-medium text-gray-700 mb-1">Customer</label>
+          <div class="relative w-48">
+            <label class="block text-xs font-medium mb-1">Customer</label>
             <ng-select [(ngModel)]="projectCustomerNameFilter" (change)="applyProjectFilters()" [clearable]="true"
-              [searchable]="true" class="text-xs custom-ng-select-filter">
+              [searchable]="true" class="text-xs custom-ng-select-filter w-full">
               <ng-option *ngFor="let customer of optionCustomers" [value]="customer.customer_id">
                 {{ customer.customer_name }}
               </ng-option>
@@ -1020,30 +1017,30 @@
           </div>
 
           <!-- Project Manager Filter -->
-          <div class="relative flex-grow">
-            <label class="block text-xs font-medium text-gray-700 mb-1">Project Manager</label>
+          <div class="relative w-48">
+            <label class="block text-xs font-medium mb-1">Project Manager</label>
             <ng-select [(ngModel)]="projectManagerFilterOfProject" (change)="applyProjectFilters()" [clearable]="true"
-              [searchable]="true" class="text-xs custom-ng-select-filter">
+              [searchable]="true" class="text-xs custom-ng-select-filter w-full">
               <ng-option *ngFor="let manager of optionProjectManagers" [value]="manager.user_id">
                 {{ manager.user_first_name }} {{ manager.user_last_name }}
               </ng-option>
             </ng-select>
           </div>
 
-          <div class="relative flex-grow">
-            <label class="block text-xs font-medium text-gray-700 mb-1">Type of Project</label>
+          <div class="relative w-48">
+            <label class="block text-xs font-medium mb-1">Type of Project</label>
             <ng-select [(ngModel)]="typeOfProjectFilter" (change)="applyProjectFilters()" [clearable]="true"
-              [searchable]="true" class="text-xs custom-ng-select-filter">
+              [searchable]="true" class="text-xs custom-ng-select-filter w-full">
               <ng-option *ngFor="let project of optionTypeOfProject" [value]="project.type_of_project_id">
                 {{ project.project_type_name }}
               </ng-option>
             </ng-select>
           </div>
 
-          <div class="relative flex-grow">
-            <label class="block text-xs font-medium text-gray-700 mb-1">Type of Engagement</label>
+          <div class="relative w-48">
+            <label class="block text-xs font-medium mb-1">Type of Engagement</label>
             <ng-select [(ngModel)]="typeOfEngagementFilter" (change)="applyProjectFilters()" [clearable]="true"
-              [searchable]="true" class="text-xs custom-ng-select-filter">
+              [searchable]="true" class="text-xs custom-ng-select-filter w-full">
               <ng-option *ngFor="let engagement of optionTypeOfEngagement" [value]="engagement.type_of_engagement_id">
                 {{ engagement.type_of_engagement_name }}
               </ng-option>
@@ -1051,10 +1048,10 @@
           </div>
 
           <!-- Project Status Filter (ng-select) -->
-          <div class="relative flex-grow">
-            <label class="block text-xs font-medium text-gray-700 mb-1">Project Status</label>
+          <div class="relative w-48">
+            <label class="block text-xs font-medium mb-1">Project Status</label>
             <ng-select [(ngModel)]="projectStatusFilter" (change)="applyProjectFilters()" [clearable]="true"
-              [searchable]="true" class="text-xs custom-ng-select-filter">
+              [searchable]="true" class="text-xs custom-ng-select-filter w-full">
               <ng-option *ngFor="let status of optionProjectStatus" [value]="status.project_status_id">
                 {{ status.status_name }}
               </ng-option>
@@ -1062,50 +1059,50 @@
           </div>
 
           <!-- Planned Start Date Filter -->
-          <div class="relative flex-grow">
-            <label class="block text-xs font-medium text-gray-700 mb-1">Planned Start Date</label>
+          <div class="relative w-48">
+            <label class="block text-xs font-medium mb-1">Planned Start Date</label>
 
             <input type="date" [(ngModel)]="plannedStartDateFilter" (change)="applyProjectFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
+              class="text-xs border border-gray-300 rounded px-2 py-1 w-full h-6 " />
             <button *ngIf="plannedStartDateFilter" (click)="clearProjectFilter('plannedStartDateFilter')"
-              class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
+              class="absolute right-1 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700">
               ×
             </button>
           </div>
 
           <!-- Actual Start Date Filter -->
-          <div class="relative flex-grow">
-            <label class="block text-xs font-medium text-gray-700 mb-1">Actual Start Date</label>
+          <div class="relative w-48">
+            <label class="block text-xs font-medium mb-1">Actual Start Date</label>
 
             <input type="date" [(ngModel)]="actualStartDateFilter" (change)="applyProjectFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
+              class="text-xs border border-gray-300 rounded px-2 py-1 w-full h-6 " />
             <button *ngIf="actualStartDateFilter" (click)="clearProjectFilter('actualStartDateFilter')"
-              class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
+              class="absolute right-1 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700">
               ×
             </button>
           </div>
 
           <!-- Tentative End Date Filter -->
-          <div class="relative flex-grow">
-            <label class="block text-xs font-medium text-gray-700 mb-1">Tentative End Date</label>
+          <div class="relative w-48">
+            <label class="block text-xs font-medium mb-1">Tentative End Date</label>
 
             <input type="date" [(ngModel)]="tentativeEndDateFilter" (change)="applyProjectFilters()"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
+              class="text-xs border border-gray-300 rounded px-2 py-1 w-full h-6 " />
             <button *ngIf="tentativeEndDateFilter" (click)="clearProjectFilter('tentativeEndDateFilter')"
-              class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
+              class="absolute right-1 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700">
               ×
             </button>
           </div>
 
           <!-- Project Description Filter -->
-          <div class="relative flex-grow">
-            <label class="block text-xs font-medium text-gray-700 mb-1">Project Description</label>
+          <div class="relative w-48">
+            <label class="block text-xs font-medium mb-1">Project Description</label>
 
             <input type="text" [(ngModel)]="projectDescriptionFilter" (input)="applyProjectFilters()"
               placeholder="Search Project Description"
-              class="text-xs border border-gray-300 rounded px-1 py-1 w-full " />
+              class="text-xs border border-gray-300 rounded px-2 py-1 w-full h-6 " />
             <button *ngIf="projectDescriptionFilter" (click)="clearProjectFilter('projectDescriptionFilter')"
-              class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
+              class="absolute right-1 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700">
               ×
             </button>
           </div>
