--- a/src/app/features/timesheet/components/export-my-timesheet/export-my-timesheet.component.html
+++ b/src/app/features/timesheet/components/export-my-timesheet/export-my-timesheet.component.html
@@ -42,13 +42,12 @@
         Clear Dates
       </button>
     </div>
-    <div class="min-w-max">
-      <div
-        class="flex flex-wrap items-center justify-between gap-x-2 gap-y-4 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full">
+    <div class="min-w-full relative z-10">
+      <div class="flex flex-nowrap items-start gap-x-2 gap-y-2 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full overflow-x-auto" style="overflow: visible;">
         <!-- Customer Filter -->
-        <div class="relative flex-grow">
-          <label class="block text-xs font-medium text-gray-700 mb-1">Customer</label>
-          <ng-select [(ngModel)]="customerFilter" (change)="applyFilters()" class="text-xs custom-ng-select-filter"
+        <div class="relative w-48">
+          <label class="block text-xs font-medium mb-1">Customer</label>
+          <ng-select [(ngModel)]="customerFilter" (change)="applyFilters()" class="text-xs custom-ng-select-filter w-full"
             [clearable]="true" [searchable]="true">
             <ng-option [value]="null">Select Customer</ng-option>
             <ng-option *ngFor="let customer of optionCustomers" [value]="customer.customer_id">
@@ -58,9 +57,9 @@
         </div>
 
         <!-- Project Filter -->
-        <div class="relative flex-grow">
-          <label class="block text-xs font-medium text-gray-700 mb-1">Project</label>
-          <ng-select [(ngModel)]="projectFilter" (change)="applyFilters()" class="text-xs custom-ng-select-filter"
+        <div class="relative w-48">
+          <label class="block text-xs font-medium mb-1">Project</label>
+          <ng-select [(ngModel)]="projectFilter" (change)="applyFilters()" class="text-xs custom-ng-select-filter w-full"
             [clearable]="true" [searchable]="true">
             <ng-option [value]="null">Select Project</ng-option>
             <ng-option *ngFor="let project of optionProjects" [value]="project.project_id">
@@ -69,19 +68,19 @@
           </ng-select>
         </div>
 
-        <div class="relative flex-grow">
-          <label class="block text-xs font-medium text-gray-700 mb-1">Deliverable</label>
+        <div class="relative w-48">
+          <label class="block text-xs font-medium mb-1">Deliverable</label>
           <ng-select [(ngModel)]="projectDeliverableFilter" (change)="applyFilters()"
-            class="text-xs custom-ng-select-filter" [clearable]="true" [searchable]="true">
+            class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
             <ng-option [value]="null">Select Deliverable</ng-option>
             <ng-option *ngFor="let deliverable of optionProjectDeliverables" [value]="deliverable.pd_id">
               {{ deliverable.project_deliverable_name }}
             </ng-option>
           </ng-select>
         </div>
-        <div class="relative flex-grow">
-          <label class="block text-xs font-medium text-gray-700 mb-1">Phase</label>
-          <ng-select [(ngModel)]="phasesFilter" (change)="applyFilters()" class="text-xs custom-ng-select-filter"
+        <div class="relative w-48">
+          <label class="block text-xs font-medium mb-1">Phase</label>
+          <ng-select [(ngModel)]="phasesFilter" (change)="applyFilters()" class="text-xs custom-ng-select-filter w-full"
             [clearable]="true" [searchable]="true">
             <ng-option [value]="null">Select Phase</ng-option>
             <ng-option *ngFor="let phases of optionPhases" [value]="phases.phase_id">
@@ -91,10 +90,10 @@
         </div>
 
         <!-- project manager -->
-        <div class="relative flex-grow">
-          <label class="block text-xs font-medium text-gray-700 mb-1">Project Manager</label>
+        <div class="relative w-48">
+          <label class="block text-xs font-medium mb-1">Project Manager</label>
           <ng-select [(ngModel)]="projectManagerFilter" (change)="applyFilters()"
-            class="text-xs custom-ng-select-filter" [clearable]="true" [searchable]="true">
+            class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
             <ng-option [value]="null">Select Project Manager</ng-option>
             <ng-option *ngFor="let manager of optionProjectManagers" [value]="manager.user_id">
               {{ manager.user_first_name }} {{ manager.user_last_name }}
@@ -102,19 +101,19 @@
           </ng-select>
         </div>
         <!-- Timesheet Date Filter -->
-        <div class="relative flex-grow">
-          <label class="block text-xs font-medium text-gray-700 mb-1">Date</label>
+        <div class="relative w-48">
+          <label class="block text-xs font-medium mb-1">Date</label>
           <input type="date" [(ngModel)]="timesheetDateFilter" (change)="applyFilters()"
-            class="text-xs border border-gray-300 rounded px-1 py-1 w-full focus:outline-none focus:ring focus:ring-blue-300" />
+            class="text-xs border border-gray-300 rounded px-2 py-1 w-full h-6" />
           <button *ngIf="timesheetDateFilter" (click)="clearFilter('timesheetDateFilter')"
-            class="absolute inset-y-0 right-0 px-2 flex items-center text-gray-500 hover:text-gray-700">
+            class="absolute right-1 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700">
             ×
           </button>
         </div>
 
-        <div class="relative flex-grow">
-          <label class="block text-xs font-medium text-gray-700 mb-1">Task Status</label>
-          <ng-select [(ngModel)]="taskStatusFilter" (change)="applyFilters()" class="text-xs custom-ng-select-filter"
+        <div class="relative w-48">
+          <label class="block text-xs font-medium mb-1">Task Status</label>
+          <ng-select [(ngModel)]="taskStatusFilter" (change)="applyFilters()" class="text-xs custom-ng-select-filter w-full"
             [clearable]="true">
             <ng-option [value]="null">Select Task Status</ng-option>
             <ng-option [value]="1">Completed</ng-option>
@@ -123,10 +122,18 @@
         </div>
 
         <!-- Clear All Filters -->
-        <button (click)="clearFilters()"
-          class="text-xs bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600 focus:outline-none flex-grow-0">
-          Clear All Filters
-        </button>
+        <div class="relative w-38">
+
+          <div class="h-[1.325rem]"></div> <!-- Exactly halfway between h-4 (1rem) and h-5 (1.25rem) -->
+
+        <button (click)="clearFilters()" title="Clear all filters"
+        class="text-xs text-red-500 hover:text-red-700 bg-white border border-gray-300 rounded px-2 py-1 h-6 flex items-center space-x-1 hover:bg-gray-50 transition-colors shrink-0">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
+        </svg>
+        <span>Clear</span>
+      </button>
+      </div>
       </div>
     </div>
 
