--- a/src/app/features/organisation-section/components/employee/employee.component.html
+++ b/src/app/features/organisation-section/components/employee/employee.component.html
@@ -176,7 +176,7 @@
           <div class="rounded-lg w-full overflow-x-auto p-2 bg-white shadow-sm border border-gray-200">
 
             <!-- Filters -->
-            <div class="min-w-full relative z-10">
+            <div class="min-w-full relative ">
               <div class="flex flex-nowrap items-start gap-x-2 gap-y-2 mb-4 py-2 bg-gray-50 rounded shadow-sm w-full overflow-x-auto" style="overflow: visible;">
                 <!-- Employee Code Filter -->
                     <div class="relative w-48">
