--- a/src/app/features/resource-management/components/all-teams-timesheet/all-teams-timesheet.component.html
+++ b/src/app/features/resource-management/components/all-teams-timesheet/all-teams-timesheet.component.html
@@ -1,13 +1,32 @@
 <div class="p-4">
-    <div class="mb-6 pb-4 border-b border-gray-200">
-        <h3 class="text-lg font-semibold text-gray-800 flex items-center">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-blue-600" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
-          </svg>
-          All Team Timesheets
-        </h3>
-        <p class="text-xs text-gray-500 mt-1">View all submitted timesheet entries</p>
+  <div class="mb-6 pb-4 border-b border-gray-200">
+    <h3 class="text-lg font-semibold text-gray-800 flex items-center">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-blue-600" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
+      </svg>
+      All Team Timesheets
+    </h3>
+    <p class="text-xs text-gray-500 mt-1">View all submitted timesheet entries</p>
+    
+    <!-- Add this summary section -->
+    <div class="flex justify-between items-center mt-4">
+      <div>
+        <p class="text-xs text-gray-500">Filtered results</p>
       </div>
+      <div class="flex items-center space-x-4">
+        <div class="text-center">
+          <div class="text-xs text-gray-500">Total Entries</div>
+          <div class="font-semibold">{{filteredTimesheets.length}}</div>
+        </div>
+        <div class="text-center">
+          <div class="text-xs text-gray-500">Total Hours</div>
+          <div class="font-semibold text-blue-600">
+            {{calculateFilteredTotalTime().hours}}h {{calculateFilteredTotalTime().minutes}}m
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
       <div class="rounded-lg w-full overflow-x-auto p-2 bg-white shadow-sm border border-gray-200">
 
